# AI-playground

./: README.md
Data Science/:  DataScience_Rice_data.ipynb  DataScience_Rice_data.ipynb
Sentiment Analysis/: Sentiment_Analysis.ipynb  Sentiment_Analysis[nltk_tokenizer].ipynb  [holdout]_Sentiment_Analysis.ipynb  sentiment_analysis_BERT-based.ipynb  sentiment_analysis_BERT_TfidfVectorizer.ipynb
Word Embedding/: Static_Word_Embeddings.ipynb
robotics_lab/apriltag_tf_mapper/: README.md  plot_path.py  visualize.ipynb
robotics_lab/apriltag_tf_mapper/tag_path_generator/: CMakeLists.txt  package.xml  vc_path.csv
robotics_lab/apriltag_tf_mapper/tag_path_generator/src/: path_saver.cpp
robotics_lab/robot_fruit_collector/src/: readme.md
robotics_lab/robot_fruit_collector/src/six_ex4/: CMakeLists.txt  package.xml
robotics_lab/robot_fruit_collector/src/six_ex4/launch/: exercise4.launch.py
robotics_lab/robot_fruit_collector/src/six_ex4/src/: burrow_node.cpp  turtlebot_node.cpp
robotics_lab/robot_fruit_collector/src/six_ex4/srv/: BurrowStatus.srv
robotics_lab/ros2-ws/: readme.md
robotics_lab/ros2-ws/src/bag_files/: bag_files_0.db3  metadata.yaml
robotics_lab/ros2-ws/src/custom_action_interfaces/: CMakeLists.txt  package.xml
robotics_lab/ros2-ws/src/my_package/: package.xml
robotics_lab/ros2-ws/src/rosbag2_2025_11_08-09_15_49/: metadata.yaml  rosbag2_2025_11_08-09_15_49_0.db3
robotics_lab/ros2-ws/src/tutorial_interfaces/: package.xml
